[build-system]
requires = ["setuptools>=42", "wheel", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

#[project]
#name = "pypuq"
#description = "Physical Units and Quantities"
#dynamic = ["version"]
#authors = [
#  { name="Ondrej Pego Jaura", email="vrtulka23@pm.me" },
#]
#requires-python = ">=3.8"
#readme = "README.md"
#
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.12",
#    "Programming Language :: C++",
#    "License :: OSI Approved :: MIT License",
#    "Operating System :: MacOS :: MacOS X",
#    "Topic :: Scientific/Engineering",
#    "Topic :: Scientific/Engineering :: Mathematics",
#    "Topic :: Scientific/Engineering :: Physics",
#    "Topic :: Software Development :: Libraries",
#]
#
#[tool.setuptools.dynamic]
#version = {attr = "1.1.4"}
#
#[build-system]
#requires = ["setuptools", "wheel", "pybind11"]
#build-backend = "setuptools.build_meta"
#
#[project.urls]
#Homepage = "https://github.com/vrtulka23/scnt-puq"
#Issues = "https://github.com/vrtulka23/scnt-puq/issues"
#Repository = "https://github.com/vrtulka23/scnt-puq"